Squashed the history
Revised PLAN-SBT-ON-HOST.md: Plan the native build sandbox as an agent-invoked, macOS-only feature

  The plan described a build sandbox a person runs. Its actual consumer is the
  agent in the container, and that changes the security contract: every grant
  is a grant to code the agent chose, because sbt executes the build
  definition, task arguments and test code alike.

  What follows from that:

  - §2.1 reproduces ko-agent-fs's guard. Denying .git and .ko-agent-sandbox at
    any depth, case-folded and covering link creation, is what stops a build
    writing state the host user's next git command executes — contained in the
    build sandbox, and executed outside every sandbox.
  - §5 gives agent builds a per-project Coursier cache under XDG_CACHE_HOME
    rather than the user's own. Write access to a machine-wide artifact cache
    is write access to every other project's dependencies.
  - §8 runs one proxy per build instead of sharing the session's, whose
    allowlist is far wider than a build needs.
  - §6 is the channel: sandbox-run-on-host, named rather than shadowing sbt so
    the venue is visible, and never falling back to the container.
  - §12 accounts for the documentation sites the feature changes, SECURITY.md
    and the canonical launcher boundary diagram included.

  macOS only. Linux gains nothing without a VM to escape, and cannot express
  the guard either: bubblewrap's mounts and Landlock's ruleset are both fixed
  before the build starts, so a .git created mid-build is uncovered.
  AppContainer expresses the grants but not the denies, because Windows ACL
  inheritance has no name-pattern matching.

  Claims that could not be verified here stay in §17 instead of the contract:
  Seatbelt's canonicalization, case folding and file-link coverage, zinc's
  invalidation behaviour, and the channel's teardown.

  Companion updates: PLAN-COURSIER.md records what --run-on-host takes over
  and what it still carries, PLAN-STAGED.