@@ -1,13 +1,13 @@
 name := "ko-agent-sandbox"
 version := "0.1.0"
-scalaVersion := "3.8.4"
+scalaVersion := "3.9.0"
 
 Compile / mainClass := Some("agentsandbox.launcher.AgentSandboxLauncher")
 
 libraryDependencies ++= Seq(
   "org.bouncycastle" % "bcpkix-jdk18on" % "1.85",  // JCA cannot build X.509 certificates
 
-  "org.scalameta" %% "munit" % "1.3.5" % Test,
+  "org.scalameta" %% "munit" % "1.3.6" % Test,
 )
 
 scalacOptions ++= Seq(
@@ -24,14 +24,51 @@ scalacOptions ++= Seq(
 // serial costs almost nothing and removes the whole class of interference.
 Test / parallelExecution := false
 
+// The container-launching suites run only under this command; `test` and `testFull` alone skip
+// them, so no ordinary build starts a session. The command sets a system property the suites'
+// gate reads (WithPodman.underTestWithPodman) for one run of testFull, or of testOnly with the
+// patterns given, and clears it however the run ends. Not an environment variable: the tests run
+// in the sbt server's JVM, whose environment is the one it was started with, so a variable on a
+// thin client's command line never reaches them and the run passes with every session suite
+// skipped. The task is run here rather than pushed as a command, so its failure is the command's
+// failure and the clearing survives an interrupted run, which a test cleanup hook would not.
+val TestWithPodmanProperty = "ko-agent-sandbox.testWithPodman"
+commands += Command.args("testWithPodman", "<testOnly patterns>") { (state, patterns) =>
+  val extracted = Project.extract(state)
+  System.setProperty(TestWithPodmanProperty, "1")
+  try
+    if (patterns.isEmpty) extracted.runTask(Test / testFull, state)._1
+    else extracted.runInputTask(Test / testOnly, patterns.mkString(" ", " ", ""), state)._1
+  finally System.clearProperty(TestWithPodmanProperty)
+}
+
+// --serve-proxy-on-host runs the proxy of the ko-agent-egress-proxy subproject, compiled into
+// this jar from the same sources so an installed launcher carries it — the Scala sources, and the
+// /defaults resources their class initialization loads eagerly. The subproject's own build still
+// exists for the container image, which builds a native image from the bundled context; its
+// tests run there.
+Compile / unmanagedSourceDirectories +=
+  baseDirectory.value / "container" / "ko-agent-egress-proxy" / "app" / "src" / "main" / "scala"
+Compile / unmanagedResourceDirectories +=
+  baseDirectory.value / "container" / "ko-agent-egress-proxy" / "app" / "src" / "main" / "resources"
+
 // execvp is a restricted FFM method: without this, a warning per launch and refusal on a future JDK.
-Compile / run / javaOptions += "--enable-native-access=ALL-UNNAMED"
+// The exports open the JDK's internal certificate builder to the proxy sources compiled in below
+// (X509Helper.scala has why); the assembly manifest carries both for `java -jar`, the README's
+// native-image command for the binary, and .jvmopts for the tests, which run in sbt's own JVM —
+// a forked test JVM would need sbt's TCP listener to reach it, which the host build sandbox does
+// not grant (doc/run-on-host.md, "Network").
+Compile / run / javaOptions ++= Seq(
+  "--enable-native-access=ALL-UNNAMED",
+  "--add-exports=java.base/sun.security.x509=ALL-UNNAMED",
+  "--add-exports=java.base/sun.security.util=ALL-UNNAMED",
+)
 Compile / run / fork := true
 
 // The --help text has one home: README.md's Reference block, the copy a reader browses before any
 // jar exists. This task extracts it into the resource AgentSandboxLauncher.UsageText prints, so
 // what --help shows cannot drift from what README shows. Anchored on the heading rather than on an
-// invocation line, which would spell a launch channel (java -jar today, a cs-installed command
+// invocation line, which would spell one launch command (java -jar today, a cs-installed command
 // later). Extraction fails the build rather than truncate: the block must follow the heading and
 // run unbroken to the next one.
 Compile / resourceGenerators += Def.task {
@@ -60,7 +97,7 @@ Compile / resourceGenerators += Def.task {
 
   // (context root, the directories under it to bundle). Entries are stored relative to their context
   // root, so a jar entry — and the podman build path --build uses — stays a bare <image>/... whichever
-  // tree the source lives in. ko-agent-fs is under fuse/ rather than container/ because it runs in the
+  // tree the source is in. ko-agent-fs is under fuse/ rather than container/ because it runs in the
   // Podman machine, not in a container.
   val contexts = Seq(
     baseDirectory.value / "container" ->
@@ -73,12 +110,12 @@ Compile / resourceGenerators += Def.task {
   )
 
   // Build output and editor caches a worked-in checkout accumulates; keep in step with the .dockerignore files, which
-  // exclude the same set from the podman build context. Two known divergences, neither reachable:
-  // "project/project" is a substring test here but segment-anchored (**/) there, so a path like myproject/project
-  // would be dropped only here, and no bundled directory is named that way; and ko-agent-fs's .dockerignore lists only
-  // target, doc and probe, since a Rust crate grows none of the sbt and editor directories below — a stray .DS_Store
-  // there would reach a hand-run `podman build` that this task drops, costing a cache miss and nothing else (the
-  // source digest is computed from the bundle, never from a checkout).
+  // exclude the same set from the podman build context. Two known divergences, neither reachable: "project/project" is
+  // a substring test here but segment-anchored (**/) there, so a path like myproject/project would be dropped only
+  // here, and no bundled directory is named that way; and ko-agent-fs's .dockerignore lists only target, doc and probe,
+  // since no sbt or editor tool creates the directories below inside a Rust crate — a stray .DS_Store there would reach
+  // a hand-run `podman build` that this task drops, costing a cache miss and nothing else (the source digest is
+  // computed from the bundle, never from a checkout).
   //
   // ko-agent-fs/doc and ko-agent-fs/probe are excluded for a different reason: neither is a build input nor
   // distribution — probe/ holds the platform-verification probes a developer runs by hand, not under cargo — and
@@ -148,6 +185,7 @@ assembly / assemblyMergeStrategy := {
 // jar built from multi-release inputs is not itself multi-release.
 assembly / packageOptions += Package.ManifestAttributes(
   "Enable-Native-Access" -> "ALL-UNNAMED",
+  "Add-Exports" -> "java.base/sun.security.x509 java.base/sun.security.util",
   "Multi-Release" -> "true",
 )
 
